src/objects/Apttus_Config2__ConfigSelectBundleOptionsSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configuration settings for option selection pages. The record should be named as &quot;Primary Settings&quot;.</description>
    <fields>
        <fullName>Apttus_Config2__BundleDescriptionField__c</fullName>
        <description>Field name from Product object is displayed as bundle description.</description>
        <inlineHelpText>API name of a field from product object to be displayed as bundle description.</inlineHelpText>
        <label>Bundle Description Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableOptionPageSearch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether to allow option search in bundle configuration page</description>
        <inlineHelpText>Indicates whether to allow option search in bundle configuration page</inlineHelpText>
        <label>Enable Option Page Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideDisabledOptions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to hide options that have been disabled by exclusion rules.</description>
        <inlineHelpText>If checked, options which have been disabled by exclusion rules will not appear in the list of availbe options.</inlineHelpText>
        <label>Hide Disabled Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HidePriceColumn__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to hide the price information column from the options list.</description>
        <inlineHelpText>Please be careful in hiding this critical information.</inlineHelpText>
        <label>Hide Price Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideValidateButton__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide validate button in select bundle options page</description>
        <label>Hide Validate Button(D)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ListedOptionsColumn2__c</fullName>
        <description>API name of the product field to be displayed in the listed options section.</description>
        <inlineHelpText>API name of the product field to be displayed in the listed options section. A valid value could be like ProductCode.</inlineHelpText>
        <label>Listed Options Column 2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ListedOptionsColumn3__c</fullName>
        <description>API name of the product field to be displayed in the listed options section.</description>
        <inlineHelpText>API name of the product field to be displayed in the listed options section. A valid value could be like ProductCode.</inlineHelpText>
        <label>Listed Options Column 3</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MainSectionRatio__c</fullName>
        <defaultValue>&quot;0:70:30&quot;</defaultValue>
        <description>The ratio of main sections separated by colon. The default value is 0:70:30.</description>
        <inlineHelpText>The ratio of main sections separated by colon. The default value is 0:70:30.</inlineHelpText>
        <label>Main Section Ratio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MaxInlineOptionAttributes__c</fullName>
        <defaultValue>3</defaultValue>
        <description>Setting for the max number of inline option attributes displayed. The default is 3.</description>
        <inlineHelpText>Setting for the max number of inline option attributes displayed. The default is 3.</inlineHelpText>
        <label>Max Inline Option Attributes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OptionFieldInSummary__c</fullName>
        <description>Option field to be displayed on right hand side of configuration page</description>
        <inlineHelpText>Field to be displayed from Option Line Item. Only text fields are supported.</inlineHelpText>
        <label>Option Field In Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShowBundleDetail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked bundle price and quantity fields are displayed in options pages</description>
        <inlineHelpText>Check to show bundle price and quantity in options pages</inlineHelpText>
        <label>Show Bundle Detail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShowOptionQuantity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show the option quantity</description>
        <inlineHelpText>Show the option quantity</inlineHelpText>
        <label>Show Option Quantity</label>
        <type>Checkbox</type>
    </fields>
    <label>Config Select Options Settings</label>
</CustomObject>